@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class CreateSkillUI {
}

class CreateSkillController {
    + CreateSkillController(employeeRepository,AuthenticationRepository)
    + createSkill(skill)

}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getEmployeeRepository()
    + getAuthenticationRepository()
}

class AuthenticationRepository {
    + getCurrentUserSession()
}

class UserSession {
    + isLoggedInWithRole()
    + getUserId()
}

class OrganizationRepository {
    + getOrganizationByUserEmail(email)
}

class Organization {
    - String name
    - String vatNumber
    - String phone
    - String email
    - Address postalAddress
    - validateSkill(skill)
    + Organization(name, vatNumber, webSite, phone, email, postalAddress)
    - getUserByEmail(email)

}

class EmployeeRepository {
    - EmployeeRepository()
    + addSkill(Skill skill)
    + listEmployees()
    + emailExists(mail)
    + getEmployeeByUserEmail(email)

}

class Employee {
    - String name
    - Date birthdate
    - Date admission date
    - Address postalAddress
    - String phone
    - String email
    - String ID doc type
    - String ID document number
    - String Taxpayer ID
    - Skill skill
    + CompareTo(TaxPayerID)
    + Clone()
    + toString()
    + hasThisEmail(mail)
    + createSkill(skill)
    + addSkill(skill)
}


class Skill {
    - String skillName
}

note left of CreateSkillController
    - userEmail and userRole is obtained
    from the user session.
end note




Repositories -> Repositories : instance
CreateSkillUI .> CreateSkillController
CreateSkillController .> Repositories : repositories
Repositories --> "1" OrganizationRepository
OrganizationRepository --> "*" Organization : organizations
AuthenticationRepository -> "1" UserSession : usersession
Repositories --> "1" AuthenticationRepository
Employee "1" --> "*" Skill : creates
Repositories --> "1" EmployeeRepository
Organization "1" --> "*" Employee : employs
EmployeeRepository "1" --> "*" Employee : agreggates
CreateSkillController .> AuthenticationRepository
Organization "1" --> "1" EmployeeRepository



@enduml